k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xool
  namespace: xool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xool
  template:
    metadata:
      labels:
        app: xool
    spec:
      containers:
        - name: xool
          image: ghcr.io/5ym/xool:88ac9c2f5d58c6bdeaacf477ef5c6655dc5b9e2d
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: xool-images
              mountPath: /usr/src/app/images
      volumes:
        - name: xool-images
          persistentVolumeClaim:
            claimName: xool-images
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xool-web
  namespace: xool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xool-web
  template:
    metadata:
      labels:
        app: xool-web
    spec:
      containers:
        - name: xool-web
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: xool-images
              mountPath: /usr/share/nginx/html/images
      volumes:
        - name: xool-images
          persistentVolumeClaim:
            claimName: xool-images
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: xool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mongo:7
          args:
            - --setParameter
            - diagnosticDataCollectionDirectorySizeMB=50
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: xool-db
              mountPath: /data/db
      volumes:
        - name: xool-db
          persistentVolumeClaim:
            claimName: xool-db
